# twpm-firmware

./: README.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: nucleo_l476rg.conf  nucleo_l476rg.overlay  orangecrab.conf  quick_feather.conf  quick_feather.overlay
app/boards/riscv/orangecrab/: Kconfig.board  Kconfig.defconfig  orangecrab.dts  orangecrab_defconfig
app/drivers/: CMakeLists.txt
app/drivers/twpm_lpc/: CMakeLists.txt  twpm_lpc.c
app/dts/bindings/: vendor-prefixes.txt
app/include/twpm/: platform.h  test.h  tpm.h
app/src/: debug.c  lpc.c  main.c  rng.c  selftest.c
app/src/tpm/: init.c
app/src/tpm/plat/: cancel.c  clock.c  entropy.c  locality.c  nv.c  physical_presence.c  power.c  run_command.c  unique.c
wolf/: wolfssl-settings.h
